k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-client-service
  namespace: apps
  labels:
    app: core-client-service
  annotations:
    secrets.doppler.com/reload: "true"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: core-client-service
  template:
    metadata:
      labels:
        app: core-client-service
    spec:
      containers:
        - name: app
          image: franciscoheral02/core-client-service:VERSION_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 2

          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "350Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: core-client-service
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: core-client-service
