k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-client-service
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: core-client-service
