k8s/dev/ingress-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: core-client-service
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.devfheral.dev`) && PathPrefix(`/api/v1/customers`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: kube-system
      services:
        - name: core-client-service
          port: 8080
  tls: {}
